@@ -1,6 +1,5 @@
 package com.thecodereveal.shopease.services;
 
-import com.stripe.model.PaymentIntent;
 import com.thecodereveal.shopease.auth.dto.OrderResponse;
 import com.thecodereveal.shopease.auth.entities.User;
 import com.thecodereveal.shopease.dto.OrderDetails;
@@ -9,54 +8,47 @@ import com.thecodereveal.shopease.dto.OrderRequest;
 import com.thecodereveal.shopease.entities.*;
 import com.thecodereveal.shopease.repositories.OrderRepository;
 import jakarta.transaction.Transactional;
-import org.apache.coyote.BadRequestException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
 
 import java.security.Principal;
 import java.util.*;
+import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Service
 public class OrderService {
-
+    private static final Logger logger = LoggerFactory.getLogger(OrderService.class);
     @Autowired
     private UserDetailsService userDetailsService;
 
     @Autowired
     private OrderRepository orderRepository;
 
-    @Autowired
-    ProductService productService;
-
-    @Autowired
-    PaymentIntentService paymentIntentService;
-
-
     @Transactional
     public OrderResponse createOrder(OrderRequest orderRequest, Principal principal) throws Exception {
-        User user = (User) userDetailsService.loadUserByUsername(principal.getName());
-        Address address = user.getAddressList().stream().filter(address1 -> orderRequest.getAddressId().equals(address1.getId())).findFirst().orElseThrow(BadRequestException::new);
+        logger.info("Creating order for user: " + principal.getName());
+        logger.info("Order request: " + orderRequest);
+        Order order = Order.builder()
+                .order_id(orderRequest.getOrder_id())
+//                .street(orderRequest.getStreet())
+                // Ensure this is an int
+                .created_at(orderRequest.getCreated_at())
 
-        Order order= Order.builder()
-                .user(user)
-                .address(address)
-                .totalAmount(orderRequest.getTotalAmount())
-                .orderDate(orderRequest.getOrderDate())
-                .discount(orderRequest.getDiscount())
-                .expectedDeliveryDate(orderRequest.getExpectedDeliveryDate())
-                .paymentMethod(orderRequest.getPaymentMethod())
-                .orderStatus(OrderStatus.PENDING)
+                .status(orderRequest.getStatus())
                 .build();
+
         List<OrderItem> orderItems = orderRequest.getOrderItemRequests().stream().map(orderItemRequest -> {
             try {
-                Product product= productService.fetchProductById(orderItemRequest.getProductId());
-                OrderItem orderItem= OrderItem.builder()
-                        .product(product)
-                        .productVariantId(orderItemRequest.getProductVariantId())
+                OrderItem orderItem = OrderItem.builder()
                         .quantity(orderItemRequest.getQuantity())
+                        .size(orderItemRequest.getSize())
+                        .final_price(orderItemRequest.getFinal_price())
                         .order(order)
                         .build();
+                logger.info("Order item created: " + orderItem);
                 return orderItem;
             } catch (Exception e) {
                 throw new RuntimeException(e);
@@ -64,97 +56,48 @@ public class OrderService {
         }).toList();
 
         order.setOrderItemList(orderItems);
-        Payment payment=new Payment();
-        payment.setPaymentStatus(PaymentStatus.PENDING);
-        payment.setPaymentDate(new Date());
-        payment.setOrder(order);
-        payment.setAmount(order.getTotalAmount());
-        payment.setPaymentMethod(order.getPaymentMethod());
-        order.setPayment(payment);
         Order savedOrder = orderRepository.save(order);
 
-
-        OrderResponse orderResponse = OrderResponse.builder()
-                .paymentMethod(orderRequest.getPaymentMethod())
-                .orderId(savedOrder.getId())
+        return OrderResponse.builder()
+                .orderId(savedOrder.getOrder_id())
                 .build();
-        if(Objects.equals(orderRequest.getPaymentMethod(), "CARD")){
-            orderResponse.setCredentials(paymentIntentService.createPaymentIntent(order));
-        }
-
-        return orderResponse;
-
     }
 
-    public Map<String,String> updateStatus(String paymentIntentId, String status) {
+    public List<OrderDetails> getOrdersByUser(String email) {
+        logger.info("Fetching orders for user with email: " + email);
 
-        try{
-            PaymentIntent paymentIntent= PaymentIntent.retrieve(paymentIntentId);
-            if (paymentIntent != null && paymentIntent.getStatus().equals("succeeded")) {
-               String orderId = paymentIntent.getMetadata().get("orderId") ;
-               Order order= orderRepository.findById(UUID.fromString(orderId)).orElseThrow(BadRequestException::new);
-               Payment payment = order.getPayment();
-               payment.setPaymentStatus(PaymentStatus.COMPLETED);
-                payment.setPaymentMethod(paymentIntent.getPaymentMethod());
-                order.setPaymentMethod(paymentIntent.getPaymentMethod());
-                order.setOrderStatus(OrderStatus.IN_PROGRESS);
-                order.setPayment(payment);
-                Order savedOrder = orderRepository.save(order);
-                Map<String,String> map = new HashMap<>();
-                map.put("orderId", String.valueOf(savedOrder.getId()));
-                return map;
-            }
-            else{
-                throw new IllegalArgumentException("PaymentIntent not found or missing metadata");
-            }
-        }
-        catch (Exception e){
-            throw new IllegalArgumentException("PaymentIntent not found or missing metadata");
-        }
-    }
+        // Fetch the user by email
+        User user = (User) userDetailsService.loadUserByUsername(email);
+        String phoneNumber = user.getPhoneNumber();
 
-    public List<OrderDetails> getOrdersByUser(String name) {
-        User user = (User) userDetailsService.loadUserByUsername(name);
-        List<Order> orders = orderRepository.findByUser(user);
-        return orders.stream().map(order -> {
-            return OrderDetails.builder()
-                    .id(order.getId())
-                    .orderDate(order.getOrderDate())
-                    .orderStatus(order.getOrderStatus())
-                    .shipmentNumber(order.getShipmentTrackingNumber())
-                    .address(order.getAddress())
-                    .totalAmount(order.getTotalAmount())
-                    .orderItemList(getItemDetails(order.getOrderItemList()))
-                    .expectedDeliveryDate(order.getExpectedDeliveryDate())
-                    .build();
-        }).toList();
+        logger.info("Fetching orders for user with phone number: " + phoneNumber);
 
-    }
+        // Fetch orders using the phone number
+        List<Order> orders = orderRepository.findByUserPhoneNumber(phoneNumber);
 
-    private List<OrderItemDetail> getItemDetails(List<OrderItem> orderItemList) {
+        logger.info("Orders fetched: " + orders);
 
-        return orderItemList.stream().map(orderItem -> {
-            return OrderItemDetail.builder()
-                    .id(orderItem.getId())
-                    .itemPrice(orderItem.getItemPrice())
-                    .product(orderItem.getProduct())
-                    .productVariantId(orderItem.getProductVariantId())
-                    .quantity(orderItem.getQuantity())
-                    .build();
-        }).toList();
+        return orders.stream().map(order -> OrderDetails.builder()
+                .order_id(order.getOrder_id())
+                .created_at(order.getCreated_at())
+                .status(order.getStatus())
+//                .street(order.getStreet().getStreet())
+                .orderItemList(order.getOrderItemList().stream().map(orderItem -> OrderItemDetail.builder()
+                        .final_price(orderItem.getFinal_price())
+                        .size(orderItem.getSize())
+                        .quantity(orderItem.getQuantity())
+                        .build()).collect(Collectors.toList()))
+                .build()).collect(Collectors.toList());
     }
 
     public void cancelOrder(UUID id, Principal principal) {
         User user = (User) userDetailsService.loadUserByUsername(principal.getName());
-        Order order = orderRepository.findById(id).get();
-        if(null != order && order.getUser().getId().equals(user.getId())){
-            order.setOrderStatus(OrderStatus.CANCELLED);
-            //logic to refund amount
+        Order order = orderRepository.findById(id).orElseThrow(() -> new RuntimeException("Order not found"));
+        if (order.getUser().getPhoneNumber().equals(user.getPhoneNumber())) {
+            order.setStatus("CANCELLED");
             orderRepository.save(order);
+        } else {
+            throw new RuntimeException("Unauthorized action");
         }
-        else{
-            new RuntimeException("Invalid request");
-        }
-
     }
 }
